# mlipts

./: CONTRIBUTING.md  LICENSE  README.md  append_to_database.py  build_script.py  dependancies.txt  lammps.py  pyproject.toml  run_lammps.sh  test.txt  training_workflow.py  vasp.py
contributing/: README.md
contributors/: README.md
examples/PuO2/: MD_submission_script_#0  workflow.ipynb
examples/PuO2/MD_scripts/: MD_submission_script_#0
examples/PuO2/QM_calculations/: README.md
examples/PuO2/QMscripts/: QM_submission_script_#0  QM_submission_script_#1  QM_submission_script_#2
examples/PuO2/lammps_base_PuO2/: in.PuO2
examples/PuO2/vasp_base_PuO2/: POTCAR
examples/example1/: run_lammps.sh
examples/example1/PuO2_T_200/: in.PuO2  md.lammpstrj
examples/example1/lammps_base_PuO2/: in.PuO2
examples/example1/vasp_base_PuO2/: KPOINTS  POTCAR
mlipts/: 24_atom_configs_76_tol_0.1.xyz  analysis.py  append_to_database.py  atomic_cluster_exp.ipynb  data_collection.py  data_collection_2.py  data_collection_old.py  example_data.txt  model_01_data.xyz  test_data.xyz
mlipts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mlipts/codes/: README.md  lammps.py  lammps_old.py  vasp.py
mlipts/hpc_submission/: README.md  archer2.py
mlipts/similarity/: emd.py  filter.py  pdd.py
pytrain-examples/example1/: submit_lammps_calcs  workflow.ipynb
pytrain-examples/example1/PuO2_T_100/: in.PuO2  md.lammpstrj  out.PuO2
pytrain-examples/example1/PuO2_T_200/: out.PuO2
pytrain-examples/example1/vasp_base_PuO2/: INCAR
(+6 files in other folders)
