[project]
name = "mlipts"
version = "0.1.1"
description = "Machine Learning Interatomic Potentials Training Suite"
authors = [
  {name = "William Davie", email = "willdavie2002@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "ase",
    "py4vasp",
    "numpy",
    "scipy",
    "matplotlib",
]

license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]